       fatal by adding %std_opts to its own parameter validation
     removed hundreds of places where debug settings were explicity passed.
   renamed M:T:F:package_install to install_package
   renamed M:T:F:ports_update to update_ports
   fixed vqadmin install directories (due to change in FreeBSD port)
   util->get_my_ips is done in perl now, instead of using CLI cut & grep


=head2 5.25 - Jun 10, 2010

   added M:T:get_util & get_config methods (rathan than having other classes accessing the object data.
   removed $conf from calls to M:T:U:install_from_source
   M:T:Apache::start method is more reliable
   split M:T:Setup::config into config_ methods
   renamed M:T:FreeBSD::rc_dot_conf_check to conf_check, and added file option
     can be used to add entries to other config files, like make.conf now
   first argument to M:T:Utility::find_bin and syscmd are positional
   default vpopmail version is now 'port'
   new M:T objects include a $util object (it's usually loaded anyway)
   pass in $toaster objects when instantiating M:T subclasses
   added log and error methods to $toaster class, used by all subclasses
   removed M:T:Perl, replaced by methods in $util
   added freebsd port options for dovecot and roundcube
   abstracted Qmail::netqmail into several methods
   added qmail_openssl_ciphers option (thanks Craig Green).
   fixed URL to patches directory on www.tnpi.net
   install_portupgrade now defaults to off, install_portmaster added
   subscribeIMAP.sh test was fatal, now installs if missing
   M:T:DNS and t/DNS.t upgraded with better error handling and status reporting
   removed M:T:Passwd, replaced with simpler methods in M:T:Qmail
   removed qmail_(users) from toaster-watcher.conf (still honored if set)
   in t/Qmail.t, service_dir_get tests are non-fatal now
   changed IP used in RBL tests (my mail server got whitelisted?!)
   changed API for file_read, file_write, file_archive, is_port_installed,
     install_port (first arg is filename)